[package]
name = "gtest_cpp"
description = "Google test C++ library packaged using Zanbil"
version = "0.1.0"
edition = "2024"
links = "gtest_cpp"
license = "BSD-3-Clause"
repository = "https://github.com/zanbilify/googletest"

[package.metadata.zanbil]
cpp = 11

[dependencies]

[build-dependencies]
zanbil-build = "0.1.0"
build-rs = "0.3.1"
fs_extra = "1.3.0"
walkdir = "2.5.0"
cc = { version = "1.2.34", features = ["parallel"] }
